# uv

./: Cargo.toml  mkdocs.template.yml  uv.schema.json
crates/distribution-types/: Cargo.toml
crates/distribution-types/src/: index.rs  index_url.rs  lib.rs  resolution.rs
crates/pypi-types/src/: requirement.rs
crates/pypi-types/src/metadata/: metadata23.rs
crates/uv/: Cargo.toml
crates/uv-build-backend/: Cargo.toml
crates/uv-build-backend/src/: lib.rs  metadata.rs
crates/uv-build/src/: lib.rs
crates/uv-cli/src/: lib.rs
crates/uv-client/src/: flat_index.rs  registry_client.rs
crates/uv-distribution/: Cargo.toml
crates/uv-distribution/src/index/: registry_wheel_index.rs
crates/uv-distribution/src/metadata/: lowering.rs  requires_dist.rs
crates/uv-distribution/src/source/: mod.rs
crates/uv-installer/src/: plan.rs
crates/uv-python/src/: discovery.rs  virtualenv.rs
crates/uv-requirements/src/: specification.rs
crates/uv-resolver/src/: error.rs  fork_indexes.rs  lib.rs
crates/uv-resolver/src/lock/: mod.rs
crates/uv-resolver/src/pubgrub/: report.rs
crates/uv-scripts/: Cargo.toml
crates/uv-scripts/src/: lib.rs
crates/uv-settings/src/: settings.rs
crates/uv-workspace/: Cargo.toml
crates/uv-workspace/src/: pyproject.rs  pyproject_mut.rs  workspace.rs
crates/uv/src/: lib.rs  settings.rs
crates/uv/tests/: edit.rs  lock.rs  pip_install.rs  python_find.rs  show_settings.rs  sync.rs
docs/concepts/: dependencies.md
docs/configuration/: environment.md  indexes.md
docs/reference/: cli.md  pyproject_toml.md
(+19 files in other folders)
